--- a/PhraseChase/Base.lproj/Main.storyboard
+++ b/PhraseChase/Base.lproj/Main.storyboard
@@ -18,8 +18,12 @@
             <string>LilitaOne</string>
             <string>LilitaOne</string>
             <string>LilitaOne</string>
+            <string>LilitaOne</string>
         </mutableArray>
         <mutableArray key="VarelaRound-Regular.ttf">
+            <string>VarelaRound-Regular</string>
+            <string>VarelaRound-Regular</string>
+            <string>VarelaRound-Regular</string>
             <string>VarelaRound-Regular</string>
             <string>VarelaRound-Regular</string>
             <string>VarelaRound-Regular</string>
@@ -82,15 +86,15 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PMK-M5-jvT">
-                                <rect key="frame" x="209" y="243" width="151" height="55"/>
+                                <rect key="frame" x="134" y="243" width="300" height="55"/>
                                 <color key="backgroundColor" red="0.54014140367507935" green="0.73181658983230591" blue="0.17479786276817322" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="55" id="FZ5-HJ-jOt"/>
-                                    <constraint firstAttribute="width" constant="151" id="v9F-7y-Pg8"/>
+                                    <constraint firstAttribute="width" constant="300" id="v9F-7y-Pg8"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="LilitaOne" family="Lilita One" pointSize="30"/>
                                 <inset key="contentEdgeInsets" minX="40" minY="10" maxX="40" maxY="10"/>
-                                <state key="normal" title="NEXT">
+                                <state key="normal" title="NEXT WORD">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -142,7 +146,22 @@
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzF-OZ-VO2">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sY-cq-eBv">
+                                <rect key="frame" x="11" y="10" width="94" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="94" id="6Va-my-n36"/>
+                                    <constraint firstAttribute="height" constant="30" id="xLf-Hq-0uC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="VarelaRound-Regular" family="Varela Round" pointSize="15"/>
+                                <state key="normal" title="How to Play">
+                                    <color key="titleColor" red="0.59850305318832397" green="0.59819477796554565" blue="0.62261217832565308" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="TJW-Su-pqf" kind="modal" modalTransitionStyle="crossDissolve" id="YTD-j9-C4q"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fzF-OZ-VO2">
                                 <rect key="frame" x="447" y="10" width="105" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="105" id="ACG-NH-2ZL"/>
@@ -157,17 +176,22 @@
                                     <action selector="restartButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="WgL-DP-RlX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9sY-cq-eBv">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HnS-Gl-52S">
                                 <rect key="frame" x="11" y="10" width="94" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="94" id="6Va-my-n36"/>
-                                    <constraint firstAttribute="height" constant="30" id="xLf-Hq-0uC"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="94" id="7JR-he-4ef"/>
+                                    <constraint firstAttribute="height" constant="30" id="C0x-7G-CYt"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Mog-9W-aYB"/>
+                                    <constraint firstAttribute="width" constant="94" id="eXC-bA-FDq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="VarelaRound-Regular" family="Varela Round" pointSize="15"/>
-                                <state key="normal" title="How to Play">
-                                    <color key="titleColor" red="0.59850305318832397" green="0.59819477796554565" blue="0.62261217832565308" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="End Timer">
+                                    <color key="titleColor" red="0.59850305319999997" green="0.59819477799999998" blue="0.62261217830000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="endTimerPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="idA-7z-g8F"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.17717251181602478" green="0.17751896381378174" blue="0.22971495985984802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -196,11 +220,15 @@
                             <constraint firstAttribute="centerY" secondItem="MyW-T0-Gj3" secondAttribute="centerY" id="lqz-mZ-wCC"/>
                             <constraint firstItem="9sY-cq-eBv" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="10" id="mTK-aP-583"/>
                             <constraint firstAttribute="centerY" secondItem="GYl-1m-g4z" secondAttribute="centerY" id="q1x-Dr-nLB"/>
+                            <constraint firstItem="HnS-Gl-52S" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="-5" id="wZL-68-GYs"/>
+                            <constraint firstItem="HnS-Gl-52S" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="10" id="xqL-Ke-cYq"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yvY-If-0rC"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
+                        <outlet property="endTimer" destination="HnS-Gl-52S" id="BKj-Dv-Ojd"/>
+                        <outlet property="howToPlay" destination="9sY-cq-eBv" id="h4r-kb-q33"/>
                         <outlet property="restartButton" destination="fzF-OZ-VO2" id="PO3-tH-ByC"/>
                         <outlet property="skipButton" destination="PMK-M5-jvT" id="bOp-PY-UnX"/>
                         <outlet property="startButton" destination="Nq8-z1-VGa" id="cDV-6b-QW1"/>
@@ -213,6 +241,91 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="107" y="491"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="b93-MS-GpF">
+            <objects>
+                <viewController id="TJW-Su-pqf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oRL-kB-99g"/>
+                        <viewControllerLayoutGuide type="bottom" id="N3J-1N-Gl5"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="f6C-vb-wBT">
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="aSy-Ge-ioY">
+                                <rect key="frame" x="-107" y="-28" width="782" height="376"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="376" id="j74-uQ-NHf"/>
+                                    <constraint firstAttribute="width" constant="782" id="zvI-9C-fpM"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fui-kd-4pM">
+                                <rect key="frame" x="28" y="97" width="512" height="230"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <string key="text">Split up into two teams, Team A and Team B. 
+Sit so that each player is sitting next to a player from the other team.
+The objective is to make your team guess the word on the screen.
+As soon as they guess it, press "Next" and pass the game to your left.
+If the timer runs out award the point and keep playing until your team guesses correctly, then you can pass the game to the next player.
+ 
+Here are clues you cannot give:
+ 1) A word that rhymes with the word
+ 2) Any letters contained in the word
+ 3) A word that is a part of the phrase
+ 4) Opposites of the word (ex: walking for running)</string>
+                                <color key="textColor" red="0.95078355073928833" green="0.9509391188621521" blue="0.95075041055679321" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="VarelaRound-Regular" family="Varela Round" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZWc-tk-E1h">
+                                <rect key="frame" x="16" y="10" width="60" height="31"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="W10-Ws-I9a"/>
+                                    <constraint firstAttribute="height" constant="31" id="tHK-ER-eAt"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="VarelaRound-Regular" family="Varela Round" pointSize="15"/>
+                                <state key="normal" title="Go Back">
+                                    <color key="titleColor" red="0.59850305319999997" green="0.59819477799999998" blue="0.62261217830000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="modal" modalTransitionStyle="crossDissolve" id="bUM-Rq-kYw"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GAME RULES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BX0-fM-qNy">
+                                <rect key="frame" x="207" y="38" width="167" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="JJ9-Ur-RZB"/>
+                                    <constraint firstAttribute="width" constant="167" id="TVO-TT-KdK"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="LilitaOne" family="Lilita One" pointSize="29"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="fui-kd-4pM" secondAttribute="trailing" constant="12" id="0JM-f9-JZ4"/>
+                            <constraint firstAttribute="centerX" secondItem="BX0-fM-qNy" secondAttribute="centerX" constant="-6.5" id="3GZ-ky-qpr"/>
+                            <constraint firstItem="ZWc-tk-E1h" firstAttribute="leading" secondItem="f6C-vb-wBT" secondAttribute="leadingMargin" id="3Yd-r9-YOe"/>
+                            <constraint firstItem="N3J-1N-Gl5" firstAttribute="top" secondItem="fui-kd-4pM" secondAttribute="bottom" constant="-7" id="3yN-T4-FEn"/>
+                            <constraint firstAttribute="centerX" secondItem="aSy-Ge-ioY" secondAttribute="centerX" id="8Qn-xO-avh"/>
+                            <constraint firstItem="fui-kd-4pM" firstAttribute="top" secondItem="BX0-fM-qNy" secondAttribute="bottom" constant="23" id="AMX-k4-x28"/>
+                            <constraint firstItem="fui-kd-4pM" firstAttribute="leading" secondItem="f6C-vb-wBT" secondAttribute="leadingMargin" constant="12" id="aFw-KB-RwB"/>
+                            <constraint firstItem="BX0-fM-qNy" firstAttribute="top" secondItem="oRL-kB-99g" secondAttribute="bottom" constant="18" id="cyv-ks-gQU"/>
+                            <constraint firstAttribute="centerY" secondItem="aSy-Ge-ioY" secondAttribute="centerY" id="gOJ-dt-pcs"/>
+                            <constraint firstAttribute="centerX" secondItem="fui-kd-4pM" secondAttribute="centerX" id="h4E-QT-w5i"/>
+                            <constraint firstItem="ZWc-tk-E1h" firstAttribute="top" secondItem="f6C-vb-wBT" secondAttribute="topMargin" constant="10" id="mek-ZX-zcZ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="4V1-on-nBa"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CsL-J0-rQm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-560" y="491"/>
         </scene>
         <!--Winner-->
         <scene sceneID="zpr-QB-8jC">
@@ -279,7 +392,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="re3-F6-E41" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="759" y="886"/>
+            <point key="canvasLocation" x="784" y="769"/>
         </scene>
         <!--Point Record-->
         <scene sceneID="FWm-k3-mJX">
@@ -390,7 +503,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sbB-W3-7X9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31" y="988"/>
+            <point key="canvasLocation" x="107" y="1003"/>
         </scene>
     </scenes>
     <resources>
